--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<section class="py-10 w-full min-h-screen" style="background-color: #FFE5D0;">
+<section class="py-10 w-full min-h-screen" style="background-color: #FFF6ED;">
   <div class="max-w-3xl mx-auto px-4">
     <div class="rounded-2xl shadow-lg p-8 sm:p-12" style="background-color: #FAF9F9;">
       <a href="{% url 'blog_index' %}" class="text-[#89B0AE] hover:underline mb-4 inline-block">&larr; Back to Blog</a>
